# esstra

./: .gitmodules  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
core/: Makefile  README.md  esstracore.cpp  esstralink.c  modify_specs.py
doc/: README.md  presentation_history.md  project_overview.md  reproducible_builds.md
doc/case-study/: README.md  debian.md  kernel.md  openssl.md
link/: Makefile  README.md  esstralink.c
poc/: README.md
poc/rust-llvm/: Cargo.toml  Dockerfile  README.md
poc/rust-llvm/esstra-lib/: Cargo.toml  README.md
poc/rust-llvm/esstra-lib/src/: analysis.rs  format.rs  lib.rs
poc/rust-llvm/esstra-lib/src/analysis/: binary.rs
poc/rust-llvm/esstra-lib/src/format/: deps_file.rs  spdx.rs  yaml.rs
poc/rust-llvm/esstra-llvm-plugin/: .gitignore  Cargo.toml  README.md
poc/rust-llvm/esstra-llvm-plugin/examples/clang/multiple_files/: main.c
poc/rust-llvm/esstra-llvm-plugin/examples/rustc/: main.rs
poc/rust-llvm/esstra-llvm-plugin/src/: format.rs  lib.rs
poc/rust-llvm/esstra-llvm-plugin/src/format/: spdx.rs  yaml.rs
poc/rust-llvm/esstra-test-utils/: Cargo.toml  README.md
poc/rust-llvm/esstra-test-utils/src/: builder.rs  crate_test.rs  main.rs
samples/: README.md
samples/hello/: Makefile  README.md  README_FOSSOLOGY.md  README_SCANCODE.md  hello.c
samples/hello-main-sub/: Makefile  hello_main.c  hello_sub.c  hello_sub.h
samples/hello2/: Makefile  README.md  hello_main.c
samples/output-examples/: SPDX2TV_esstra.spdx  SPDX2TV_esstra_scancode.spdx
samples/sample-elfutils/: README.md
tests/: README.md  pytest.ini  test_util_show.py
util/: Makefile  README.md  esstra  esstra-full-paths  esstra-to-spdx-list.sh  esstra.py  has-spdx-id.py
(+37 files in other folders)
