[package]
name = "esstra-lib"
version = "0.4.0"
edition = "2018"

[features]
# format version feature is defined for the future use.
# add new format version if new ESSTRA Data Format is defined.
defaults = ["format-0-1"]
format-0-1 = []

[dependencies]
elf = "0.8.0"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
