[package]
name = "esstra-llvm-plugin"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = []

llvm14-0 = ["llvm-plugin/llvm14-0"]
llvm15-0 = ["llvm-plugin/llvm15-0"]
llvm16-0 = ["llvm-plugin/llvm16-0"]
llvm17-0 = ["llvm-plugin/llvm17-0"]
llvm18-1 = ["llvm-plugin/llvm18-1"]
llvm19-1 = ["llvm-plugin/llvm19-1"]
llvm20-1 = ["llvm-plugin/llvm20-1"]

[dependencies]
cargo_metadata = "0.19.0"
esstra-lib = { path = "../esstra-lib" }
llvm-plugin = { git = "https://github.com/jamesmth/llvm-plugin-rs", rev = "0a0dcc0" }
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha1 = "0.10.6"
simple_logger = { version = "5.0.0", features = ["stderr"] }

[dev-dependencies]
serde_yaml = "0.9.34"
